--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Buscar Cleaner App</title>
+    <title>Inicio Cleaner App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href="css/libs/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active"><a href="#">Inicio</a></li>
+                    <li class="nav-item active"><a href="index.html">Inicio</a></li>
                     <li class="nav-item"><a href="misreservas.html">Reservas</a></li>
                     <li class="nav-item"><a href="#pageb">Casas</a></li>
                 </ul>
@@ -38,11 +38,35 @@
     <div class="container wrap-app">
         <div class="row">
             <div class="col-xs-12">
-                <div class="wrap-action center-ver">
-                    <a href="listado.html" class="btn btn-appclean-default btn-lg btn-block">Buscar Cleaner</a>
-                    <a href="login.html" class="btn btn-default btn-lg mtop-20 btn-block">Login</a>
-                </div>
+            	<div class="hold-login">
+            		<h4>Log in</h4>
+					<form role="form">
+						<div class="form-group">
+							<div class="input-group">
+								<input type="text" class="form-control" id="uLogin" placeholder="Login">
+								<label for="uLogin" class="input-group-addon glyphicon glyphicon-user"></label>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="input-group">
+								<input type="password" class="form-control" id="uPassword" placeholder="Password">
+								<label for="uPassword" class="input-group-addon glyphicon glyphicon-lock"></label>
+							</div> 
+						</div>
+						<div class="form-group">
+			              <button class="btn btn-appclean-default btn-lg btn-block">Sign In</button>
+			              <span class="pull-right"><a href="#">Registrarse</a></span><span><a href="#">Ayuda?</a></span>
+			            </div>
+
+					</form>
+
+            	</div>
             </div>
+            <div class="col-md-6"></div>
+            <div class="col-md-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12"></div>
         </div>
     </div>
     <script type="text/javascript" src="js/libs/jquery-1.11.3.js"></script>
