--- a/misreservas.html
+++ b/misreservas.html
@@ -27,9 +27,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active"><a href="#">Inicio</a></li>
-                    <li class="nav-item"><a href="#pagea">Reservas</a></li>
-                    <li class="nav-item"><a href="#pageb">Casas</a></li>
+                    <li class="nav-item active"><a href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a href="misreservas.html">Reservas</a></li>
+                    <li class="nav-item"><a href="agregarcasa.html">Casas</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="#pagec">otro</a></li>
