Cambios Clean App

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item active"><a href="index.html">Inicio</a></li>
                     <li class="nav-item"><a href="misreservas.html">Reservas</a></li>
-                    <li class="nav-item"><a href="#pageb">Casas</a></li>
+                    <li class="nav-item"><a href="listado.html">Listado</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="#pagec">otro</a></li>
@@ -37,9 +37,9 @@
     </nav>
     <div class="container wrap-app">
         <div class="row">
-            <div class="col-xs-12">
-            	<div class="hold-login">
-            		<h4>Log in</h4>
+            <div class="col-xs-12 top-buffer-min">
+                <h4>Acceder</h4>
+                <div class="hold-login">
 					<form role="form">
 						<div class="form-group">
 							<div class="input-group">
@@ -57,7 +57,6 @@
 			              <button class="btn btn-appclean-default btn-lg btn-block">Sign In</button>
 			              <span class="pull-right"><a href="#">Registrarse</a></span><span><a href="#">Ayuda?</a></span>
 			            </div>
-
 					</form>
 
             	</div>
