--- a/misreservas.html
+++ b/misreservas.html
@@ -29,7 +29,7 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item active"><a href="index.html">Inicio</a></li>
                     <li class="nav-item"><a href="misreservas.html">Reservas</a></li>
-                    <li class="nav-item"><a href="agregarcasa.html">Casas</a></li>
+                    <li class="nav-item"><a href="listado.html">Listado</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="#pagec">otro</a></li>
@@ -70,7 +70,7 @@
     <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/libs/jquery.calendario.js"></script>
     <script type="text/javascript" src="js/data-eventos.js"></script>
-    <script type="text/javascript" src="js/fns.js"></script>
+    <script type="text/javascript" src="js/calendar-fns.js"></script>
 </body>
 
 </html>
