--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Buscar Cleaner App</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Buscar Cleaner App</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href="css/libs/bootstrap.min.css" rel="stylesheet">
     <link href="css/libs/animate.css" rel="stylesheet">
@@ -27,7 +28,7 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item active"><a href="#">Inicio</a></li>
                     <li class="nav-item"><a href="misreservas.html">Reservas</a></li>
-                    <li class="nav-item"><a href="#pageb">Casas</a></li>
+                    <li class="nav-item"><a href="listado.html">Listado</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="#pagec">otro</a></li>
@@ -47,7 +48,6 @@
     </div>
     <script type="text/javascript" src="js/libs/jquery-1.11.3.js"></script>
     <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/fns.js"></script>
 </body>
 
 </html>
